Переделаны классы, в связи с изменением проектирования, отлажены баги

--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -48,5 +48,13 @@
         android:layout_gravity="center"
         android:text="@string/edit" />
 
+    <Button
+        android:id="@+id/deleteServiceEditServiceBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="center"
+        android:text="@string/deleteService" />
 
 </LinearLayout>
