--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -201,7 +201,7 @@
             android:id="@+id/profileRatingBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"/>
+            android:isIndicator="true"/>
 
         <TextView
             android:id="@+id/ratingProfileText"
