refactoring class mainScreen, new ratingBar on Profile, RatingBarForServiceElement rename to RatingBarElement

--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -98,10 +98,10 @@
         android:textOn="ON"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintHorizontal_bias="0.962"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/servicesProfileScroll"
-        app:layout_constraintVertical_bias="0.100000024"
+        app:layout_constraintVertical_bias="0.102"
         app:showText="true" />
 
     <ScrollView
@@ -190,24 +190,28 @@
         android:id="@+id/ratingLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
         android:layout_marginTop="16dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orderProfileScroll">
 
-        <RatingBar
-            android:id="@+id/profileRatingBar"
-            android:layout_width="match_parent"
+        <ProgressBar
+            android:id="@+id/progressBarProfile"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:isIndicator="true"
-            />
+            android:layout_gravity="center"
+            android:scaleX=".7"
+            android:scaleY=".7" />
+
         <TextView
-            android:id="@+id/ratingProfileText"
-            android:layout_width="match_parent"
+            android:id="@+id/withoutRatingProfileText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Оценок пока нет" />
+            android:text="Оценок еще нет"
+            android:visibility="invisible" />
+
     </LinearLayout>
 
 
