--- a/app/src/main/res/layout/comment_element.xml
+++ b/app/src/main/res/layout/comment_element.xml
@@ -21,4 +21,12 @@
         android:layout_weight="1"
         android:text=" "
         android:textSize="18sp" />
+
+    <RatingBar
+        android:id="@+id/ratingCommentElementBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:isIndicator="true"
+        />
 </LinearLayout>
