--- a/app/src/main/res/layout/found_service_element.xml
+++ b/app/src/main/res/layout/found_service_element.xml
@@ -32,9 +32,18 @@
 
     <TextView
         android:id="@+id/cityFoundServiceElementText"
-        android:layout_width="0dp"
+        android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text=" - "
         android:textSize="18sp" />
+
+    <RatingBar
+        android:id="@+id/ratingBarFondServiceElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:isIndicator="true"
+        style="?android:attr/ratingBarStyleSmall"
+      />
 </LinearLayout>
