--- a/app/src/main/res/layout/found_service_profile_element.xml
+++ b/app/src/main/res/layout/found_service_profile_element.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:theme="@style/allPages"
     tools:context=".fragments.foundElements.foundServiceProfileElement">
 
@@ -14,4 +15,12 @@
         android:text="TextView"
         android:textSize="18sp" />
 
+    <RatingBar
+        android:id="@+id/ratingBarFondServiceProfileElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:isIndicator="true"
+        style="?android:attr/ratingBarStyleSmall"
+        />
 </LinearLayout>
