--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -6,14 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".other.MainScreen"
     android:theme="@style/allPages">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:id="@+id/resultsMainScreenLayout"
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:isScrollContainer="true"
-        android:orientation="vertical" />
-</ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/headerMainScreenLayout">
+
+        <LinearLayout
+            android:id="@+id/resultsMainScreenLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:isScrollContainer="true"
+            android:orientation="vertical" />
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/headerMainScreenLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/footerMainScreenLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 </android.support.constraint.ConstraintLayout>
