--- a/app/src/main/res/layout/my_calendar.xml
+++ b/app/src/main/res/layout/my_calendar.xml
@@ -10,26 +10,35 @@
     <RelativeLayout
         android:id="@+id/mainMyCalendarLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-
-    </RelativeLayout>
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toTopOf="@+id/footerMyCalendarLayout"
+        app:layout_constraintTop_toBottomOf="@+id/headerMyCalendarLayout"
+        app:layout_constraintVertical_bias="0.1"
+        tools:layout_editor_absoluteX="1dp" />
 
     <Button
-        android:id="@+id/continueMyCalendarBtn2"
+        android:id="@+id/continueMyCalendarBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="32dp"
         android:text="Продолжить"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/footerMyCalendarLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerMyCalendarLayout"
+        app:layout_constraintVertical_bias="0.9" />
+
+    <LinearLayout
+        android:id="@+id/headerMyCalendarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/footerMyCalendarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
