--- a/app/src/main/res/layout/my_time.xml
+++ b/app/src/main/res/layout/my_time.xml
@@ -10,39 +10,53 @@
     <RelativeLayout
         android:id="@+id/mainMyTimeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-    </RelativeLayout>
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toTopOf="@+id/footerMyTimeLayout"
+        app:layout_constraintTop_toBottomOf="@+id/headerMyTimeLayout"
+        app:layout_constraintVertical_bias="0.1"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/saveMyTimeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
         android:text="Сохранить"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/footerMyTimeLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerMyTimeLayout"
+        app:layout_constraintVertical_bias="0.9" />
 
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/amOrPmMyTimeSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:checked="false"
         android:text="Первая половина дня"
         android:textOff="AM"
         android:textOn="PM"
-        app:layout_constraintBottom_toTopOf="@+id/saveMyTimeBtn"
+        app:layout_constraintBottom_toTopOf="@+id/footerMyTimeLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/servicesProfileScroll"
+        app:layout_constraintTop_toBottomOf="@+id/headerMyTimeLayout"
+        app:layout_constraintVertical_bias="0.8"
         app:showText="true" />
 
+    <LinearLayout
+        android:id="@+id/headerMyTimeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/footerMyTimeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
