Переделан процесс регистрации и входа, удалён пароль

--- a/app/src/main/res/layout/password_recovery.xml
+++ b/app/src/main/res/layout/password_recovery.xml
@@ -5,39 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".logIn.Authorization">
+    tools:context=".logIn.PasswordRecovery">
 
-    <ImageView
-        android:id="@+id/logoAuthImage"
+    <Spinner
+        android:id="@+id/codeRecoverySpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/phoneRecoveryInput"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/bun_beauty" />
-
-    <Spinner
-        android:id="@+id/codeAuthSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/phoneAuthInput"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoAuthImage"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <EditText
-        android:id="@+id/phoneAuthInput"
+        android:id="@+id/phoneRecoveryInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:backgroundTint="@color/lightText"
         android:ems="10"
         android:hint="@string/phoneRegistration"
@@ -46,26 +30,24 @@
         android:textColorHint="@color/lightText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.656"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoAuthImage"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
-        android:id="@+id/logInAuthBtn"
+        android:id="@+id/sendCodeRecoveryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/log_in"
-        android:visibility="invisible"
+        android:text="Отпрвить код"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoAuthImage"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
 
     <EditText
-        android:id="@+id/codeAuthInput"
+        android:id="@+id/codeRecoveryInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/lightText"
@@ -78,22 +60,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInAuthBtn"
+        app:layout_constraintTop_toBottomOf="@+id/sendCodeRecoveryBtn"
         app:layout_constraintVertical_bias="0.3" />
 
     <Button
-        android:id="@+id/verifyAuthBtn"
+        android:id="@+id/verifyRecoveryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/verifyCode"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInAuthBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/sendCodeRecoveryBtn" />
 
     <Button
-        android:id="@+id/resendAuthBtn"
+        android:id="@+id/resendRecoveryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/resendCode"
@@ -101,7 +84,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInAuthBtn"
+        app:layout_constraintTop_toBottomOf="@+id/sendCodeRecoveryBtn"
         app:layout_constraintVertical_bias="0.7" />
+
 
 </android.support.constraint.ConstraintLayout>
