--- a/app/src/main/res/layout/confirmation.xml
+++ b/app/src/main/res/layout/confirmation.xml
@@ -1,102 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    android:orientation="vertical"
-    tools:context="com.example.ideal.myapplication.logIn.Confirmation">
+    tools:context=".logIn.Confirmation">
+
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_height="113dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/bun_beauty" />
 
+    <Spinner
+        android:id="@+id/codeConfirmationSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/phoneConfirmationInput"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.3" />
+
     <EditText
-        android:layout_gravity="center"
         android:id="@+id/phoneConfirmationInput"
         android:layout_width="wrap_content"
-        android:layout_height="43dp"
-        android:textColor="@color/white"
-        android:ems="10"
-        android:layout_marginTop="45dp"
-        android:textColorHint="@color/lightText"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/lightText"
+        android:ems="10"
         android:hint="@string/phoneRegistration"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:textColor="@color/white"
+        android:textColorHint="@color/lightText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.3" />
 
     <EditText
         android:id="@+id/passConfirmationInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:backgroundTint="@color/lightText"
-        android:imeOptions="actionDone"
         android:ems="10"
         android:hint="@string/passwordRegistration"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:textColor="@color/white"
         android:textColorHint="@color/lightText"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.39" />
 
     <EditText
         android:id="@+id/repeatPassConfirmationInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:backgroundTint="@color/lightText"
-        android:imeOptions="actionDone"
         android:ems="10"
         android:hint="Подтвердите пароль"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:textColor="@color/white"
-        android:textColorHint="@color/lightText" />
+        android:textColorHint="@color/lightText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.504" />
 
     <Button
         android:id="@+id/registrationConfirmationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="5dp"
         android:background="@drawable/btn"
-        android:textStyle="bold"
+        android:text="@string/regUser"
         android:textColor="@color/white"
-        android:text="@string/regUser" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.65999997" />
 
     <EditText
         android:id="@+id/codeConfirmationInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="45dp"
-        android:ems="10"
         android:backgroundTint="@color/lightText"
+        android:ems="10"
         android:hint="@string/enterCode"
+        android:inputType="number"
         android:textColor="@color/white"
         android:textColorHint="@color/lightText"
-        android:inputType="number"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registrationConfirmationBtn"
+        app:layout_constraintVertical_bias="0.04000002" />
 
     <Button
         android:id="@+id/verifyConfirmationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="@string/verifyCode"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registrationConfirmationBtn"
+        app:layout_constraintVertical_bias="0.35000002" />
 
     <Button
         android:id="@+id/resendConfirmationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/resendCode"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registrationConfirmationBtn"
+        app:layout_constraintVertical_bias="0.71000004" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
