--- a/app/src/main/res/layout/comment_element.xml
+++ b/app/src/main/res/layout/comment_element.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:theme="@style/allPages">
+
+    <ImageView
+        android:id="@+id/avatarCommentElementImage"
+        android:layout_width="77dp"
+        android:layout_height="39dp"
+        android:layout_weight="1"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/nameCommentElementText"
@@ -24,9 +31,10 @@
 
     <RatingBar
         android:id="@+id/ratingCommentElementBar"
-        android:layout_width="wrap_content"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:isIndicator="true"
-        />
+        android:numStars="5" />
 </LinearLayout>
