--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -56,10 +56,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout"
-        app:layout_constraintVertical_bias="0.65" />
+        app:layout_constraintVertical_bias="0.399" />
 
     <LinearLayout
         android:id="@+id/resultGuestServiceLayout"
@@ -68,10 +68,10 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout"
-        app:layout_constraintVertical_bias="0.9">
+        app:layout_constraintVertical_bias="0.534">
 
         <ProgressBar
             android:id="@+id/progressBarGuestService"
@@ -109,5 +109,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
+    <HorizontalScrollView
+        android:layout_width="395dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultGuestServiceLayout"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:id="@+id/feedGuestServiceLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/serviceGuestServiceImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round"
+                tools:srcCompat="@tools:sample/avatars" />
+        </LinearLayout>
+    </HorizontalScrollView>
 
 </android.support.constraint.ConstraintLayout>
