--- a/app/src/main/res/layout/picked_comment.xml
+++ b/app/src/main/res/layout/picked_comment.xml
@@ -15,6 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/avatarPickedCommentImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
             <TextView
                 android:id="@+id/namePickedCommentText"
                 android:layout_width="wrap_content"
@@ -37,8 +42,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:isIndicator="true" />
+
         </LinearLayout>
 
     </ScrollView>
+
+
 
 </LinearLayout>
